<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2023 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView style="@style/ScrollViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_marginEnd="@dimen/spacing_16"
                    android:text="@string/label_span_setting" />

                <com.xuexiang.uithemesample.widget.CustomTextView
                    android:id="@+id/ctv_span"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_content_sample"
                    android:textColor="@color/app_color_theme_3"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_marginEnd="@dimen/spacing_16"
                    android:text="@string/label_coding_setting" />

                <com.xuexiang.uithemesample.widget.CustomTextView
                    android:id="@+id/ctv_coding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_content_sample"
                    app:ctv_is_password="true"
                    app:ctv_size="small" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_marginEnd="@dimen/spacing_16"
                    android:text="@string/label_attribute_setting" />

                <com.xuexiang.uithemesample.widget.CustomTextView
                    style="@style/LargePasswordTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_content_sample"
                    android:textColor="@color/app_color_theme_5"
                    app:ctv_is_password="false"
                    app:ctv_size="small" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_marginEnd="@dimen/spacing_16"
                    android:text="@string/label_style_setting" />

                <com.xuexiang.uithemesample.widget.CustomTextView
                    style="@style/LargePasswordTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_content_sample"
                    android:textColor="@color/app_color_theme_4" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_16" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_marginEnd="@dimen/spacing_16"
                    android:text="@string/label_default_style" />

                <com.xuexiang.uithemesample.widget.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_content_sample" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_marginEnd="@dimen/spacing_16"
                    android:text="@string/label_text_appearance_style" />

                <com.xuexiang.uithemesample.widget.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_text_content_sample"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>